Replace Vite/npm bundling with sbt-splice
sbt-splice 0.1.0 downloads a sha256-verified Preact 10.26.4 from
jsDelivr and inlines it into the Scala.js output. The docs client and
example no longer need Node or npm to bundle.

build.sbt
- Shared preactSplice pin and splicePreactSettings on docsClient and
  example (spliceFast for dev, spliceFull for the production docs site).
- Docs preview is `sbt ~docs/specularPreview`; example preview is
  `sbt ~example/ascentPreview` via AscentPreviewPlugin (port 8766).
- Drop Vite bundling, SmallModulesFor, sbt-reload, and the
  scalajs-java-securerandom dependency.

example
- Load the spliced fast.js; replace java.util.UUID with Web Crypto
  (securerandom imports Node crypto, which splice cannot resolve);
  opt into ascent-preview reload with DevReload.install().

docs
- Rewrite Mounting to describe sbt-splice; delete the Vite client.
- Drop the docs stamp poller (SpecularClient already installs SSE reload).
- Strip type="module" from the production client script: spliceFull is a
  classic Closure script, and modules are strict enough to throw on
  Scala.js Throwable.message.

core
- Bump the JSDOM test-env preact to 10.26.4 to match the pin.

project
- Catalog sbt-splice 0.1.0, bump sbt-specular to 0.14.1, add ascent-js
  and ascent-preview rows; drop sbt-reload and securerandom; regenerate
  plugins.sbt.